force-app/main/default/objects/Regulation_D_Violation__c/Regulation_D_Violation__c.object-meta.xml
<CustomObject>
    <label>Regulation D Violation</label>
    <nameField>
        <displayFormat>RDV-{000000000}</displayFormat>
        <label>Regulation D Violation #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Regulation D Violations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>