force-app/main/default/objects/Regulation_D_Violation__c/fields/Action_Taken__c.field-meta.xml
<CustomField>
    <fullName>Action_Taken__c</fullName>
    <label>Action Taken</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1st Letter</fullName>
            </value>
            <value>
                <fullName>2nd Letter</fullName>
            </value>
            <value>
                <fullName>3rd Letter - Account Converted</fullName>
            </value>
            <value>
                <fullName>3rd Letter - Account Closed</fullName>
            </value>
            <value>
                <fullName>No Action Taken</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>