force-app/main/default/objects/Regulation_D_Violation__c/fields/Days_Since_Violation__c.field-meta.xml
<CustomField>
    <fullName>Days_Since_Violation__c</fullName>
    <formula>TODAY() -  Violation_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Since Violation</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>