force-app/main/default/objects/Regulation_D_Violation__c/fields/Financial_Account__c.field-meta.xml
<CustomField>
    <fullName>Financial_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Financial Account</label>
    <referenceTo>FinServ__FinancialAccount__c</referenceTo>
    <relationshipLabel>Regulation D Violations</relationshipLabel>
    <relationshipName>Regulation_D_Violations</relationshipName>
    <type>Lookup</type>
</CustomField>