force-app/main/default/objects/Regulation_D_Violation__c/fields/Regulation_D_Violation_Notes__c.field-meta.xml
<CustomField>
    <fullName>Regulation_D_Violation_Notes__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Regulation D Violation Notes</label>
    <type>TextArea</type>
</CustomField>