force-app/main/default/objects/Regulation_D_Violation__c/fields/Violation_Count__c.field-meta.xml
<CustomField>
    <fullName>Violation_Count__c</fullName>
    <label>Violation Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>