force-app/main/default/objects/Regulation_D_Violation__c/fields/Violation_Date__c.field-meta.xml
<CustomField>
    <fullName>Violation_Date__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <encryptionScheme>None</encryptionScheme>
    <label>Violation Date</label>
    <type>Date</type>
</CustomField>