force-app/main/default/objects/Regulation_D_Violation__c/validationRules/Action_Taken_Needed.validationRule-meta.xml
<ValidationRule>
    <fullName>Action_Taken_Needed</fullName>
    <active>true</active>
    <description>Prevents a user from marking the record as &quot;Closed&quot; if the &quot;Action Taken&quot; picklist is blank.</description>
    <errorConditionFormula>AND(
   ISBLANK( TEXT(Action_Taken__c) ),
   ISPICKVAL( Status__c , &quot;Closed&quot;) 
)</errorConditionFormula>
    <errorDisplayField>Action_Taken__c</errorDisplayField>
    <errorMessage>Please populate Action Taken before setting this record to Closed.</errorMessage>
</ValidationRule>