force-app/main/default/objects/Regulation_D_Violation__c/validationRules/Prior_Value_Closed.validationRule-meta.xml
<ValidationRule>
    <fullName>Prior_Value_Closed</fullName>
    <active>false</active>
    <description>Prevents User from changing the value of the Status if it was closed.</description>
    <errorConditionFormula>ISPICKVAL( Status__c , &quot;Closed&quot;)</errorConditionFormula>
    <errorDisplayField>Status__c</errorDisplayField>
    <errorMessage>You may not change the Status of this record once it has been marked closed.</errorMessage>
</ValidationRule>