force-app/main/default/objects/Regulation_D_Violation__c/validationRules/User_Needed_for_Update.validationRule-meta.xml
<ValidationRule>
    <fullName>User_Needed_for_Update</fullName>
    <active>true</active>
    <description>Prevents a user from editing the record while it is owned by a queue. (Needs to change ownership to a user)</description>
    <errorConditionFormula>AND(
   LEFT(OwnerId,3)&lt;&gt;&quot;005&quot;,
   NOT(ISNEW())
)</errorConditionFormula>
    <errorDisplayField>OwnerId</errorDisplayField>
    <errorMessage>You may not edit this record while it is owned by the Queue. Please update the Owner field to update this record.</errorMessage>
</ValidationRule>