force-app/main/default/objects/Regulation_D_Violation__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Days_Since_Violation__c</columns>
    <columns>Violation_Count__c</columns>
    <columns>Violation_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>